--- a/css/style.css
+++ b/css/style.css
@@ -410,13 +410,13 @@ header {
 nav {
 	margin: 0;
 	overflow: hidden;
-	padding: 1.375em 0 0;
+	padding: 3.25em 0 0;
 	width: 100%;
-} 
+}
 
 nav ul {
 	float: right;
-	margin: 1.5em 0 0;
+	margin: 0;
 }
 
 nav ul li {
